--- a/passes/src/App.css
+++ b/passes/src/App.css
@@ -7,37 +7,24 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.heart {
   align-items: center;
+  background-image:url( 'https://abs.twimg.com/a/1446542199/img/t1/web_heart_animation.png');
+  background-position: left;
+  background-repeat:no-repeat;
+  background-size:2900%;
+  cursor: pointer;
+  display: flex;
+  height: 130px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 130px;
 }
 
-.App-link {
-  color: #61dafb;
+.is_animating {
+  animation: heart-burst .8s steps(28) 1;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@keyframes heart-burst {
+  from { background-position:left; }
+  to { background-position:right; }
 }
